--- a/app/src/main/res/drawable/first_select.xml
+++ b/app/src/main/res/drawable/first_select.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item  android:state_focused="false" android:drawable="@color/White"></item>
-    <item  android:state_focused="true"   android:drawable="@color/Green"></item>
+    <item  android:state_window_focused="true"  android:drawable="@color/Green"></item>
 </selector>
