--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,6 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="White">#FFFFFF</color>
-    <color name="Green">#00ff59</color>
+    <color name="Green">#0dd459</color>
+    <color name="Lightblue">#2eb4e9</color>
 </resources>
