--- a/app/src/main/res/layout/activity_coll.xml
+++ b/app/src/main/res/layout/activity_coll.xml
@@ -5,6 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/touming"
 
     tools:context="com.example.wangfeng.test.Activity.CollActivity">
 
@@ -44,6 +45,7 @@
         android:orientation="vertical"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
     <android.support.v7.widget.RecyclerView
+        android:background="@color/touming"
         android:id="@+id/recycle"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
