--- a/app/src/main/res/layout/activity_design.xml
+++ b/app/src/main/res/layout/activity_design.xml
@@ -9,7 +9,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:orientation="vertical"
-    tools:context="com.example.wangfeng.test.DesignActivity">
+    tools:context="com.example.wangfeng.test.Activity.DesignActivity">
 
     <android.support.v4.view.ViewPager
         android:id="@+id/design_pager"
