--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,10 +7,13 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".Activity.MainActivity">
+    tools:context=".Activity.RequestActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!" />
+    <android.support.design.widget.CheckableImageButton
+        android:id="@+id/floatBtn"
+        android:layout_centerInParent="true"
+        android:layout_width="200dp"
+        android:layout_height="100dp"
+        android:src="@drawable/pic1"
+        android:scaleType="fitCenter"/>
 </RelativeLayout>
