--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,6 @@
     <color name="White">#FFFFFF</color>
     <color name="Green">#0dd459</color>
     <color name="Lightblue">#2eb4e9</color>
+    <color name="touming">#182eb4e9</color>
+    <color name="yellow">#9fdcd8aa</color>
 </resources>
