--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="Lightblue">#2eb4e9</color>
     <color name="touming">#182eb4e9</color>
     <color name="yellow">#9fdcd8aa</color>
+    <color name="black">#000000</color>
 </resources>
