--- a/app/src/main/res/layout/activity_design.xml
+++ b/app/src/main/res/layout/activity_design.xml
@@ -19,7 +19,11 @@
     <android.support.design.widget.TabLayout
         android:id="@+id/design_tab"
         android:layout_width="match_parent"
-        app:tabMode="scrollable"
-        android:layout_height="wrap_content"></android.support.design.widget.TabLayout>
+        android:layout_height="wrap_content"
+        app:tabMode="fixed"
+        app:tabTextColor="#00f"
+        app:tabSelectedTextColor="#0f0"
+        app:tabIndicatorColor="#0373b4"
+        app:tabIndicatorHeight="10dp"></android.support.design.widget.TabLayout>
 
 </LinearLayout>
