--- a/app/src/main/res/layout/activity_margin.xml
+++ b/app/src/main/res/layout/activity_margin.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -7,21 +7,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    android:background="@color/Lightblue"
     tools:openDrawer="start">
 
-    <include
-        layout="@layout/app_bar_margin"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+  <android.support.v7.widget.RecyclerView
+      android:id="@+id/list"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent">
 
-    <android.support.design.widget.NavigationView
-        android:id="@+id/nav_view"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_gravity="start"
-        android:fitsSystemWindows="true"
-        app:headerLayout="@layout/nav_header_margin"
-        app:menu="@menu/activity_margin_drawer"/>
+  </android.support.v7.widget.RecyclerView>
 
-</android.support.v4.widget.DrawerLayout>
+</RelativeLayout>
