--- a/app/src/main/res/layout/app_bar_margin.xml
+++ b/app/src/main/res/layout/app_bar_margin.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.example.wangfeng.test.Activity.MarginActivity">
+    tools:context="com.example.wangfeng.test.Activity.MainActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
