--- a/app/src/main/res/layout/content_margin.xml
+++ b/app/src/main/res/layout/content_margin.xml
@@ -10,7 +10,14 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.example.wangfeng.test.Activity.MarginActivity"
+    tools:context="com.example.wangfeng.test.Activity.MainActivity"
     tools:showIn="@layout/app_bar_margin">
-
+<CheckedTextView
+    android:layout_width="35dp"
+    android:layout_height="35dp"
+    android:background="@drawable/checked_radius"
+    tools:text="A"
+    android:textSize="25sp"
+    android:textAlignment="center"
+    android:gravity="center"/>
 </RelativeLayout>
