花束点赞特效

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,7 +5,7 @@
     <color name="colorAccent">#FF4081</color>
     <color name="White">#FFFFFF</color>
     <color name="Green">#0dd459</color>
-    <color name="Lightblue">#2eb4e9</color>
+    <color name="Lightblue">#02b2e3</color>
     <color name="touming">#182eb4e9</color>
     <color name="yellow">#9fdcd8aa</color>
     <color name="black">#000000</color>
