--- a/app/src/main/res/layout/activity_bessel.xml
+++ b/app/src/main/res/layout/activity_bessel.xml
@@ -5,15 +5,15 @@
     android:id="@+id/activity_bessel"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.wangfeng.test.Activity.BesselActivity">
 <Button
     android:id="@+id/start"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_gravity="center"
+    android:layout_centerInParent="true"
     android:text="start"/>
+    <ImageView
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        tools:src="@drawable/love"/>
 </com.example.wangfeng.test.MyViews.LoveLayout>
