--- a/app/src/main/res/layout/item_recycler_first.xml
+++ b/app/src/main/res/layout/item_recycler_first.xml
@@ -1,18 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:tools="http://schemas.android.com/tools"
               android:orientation="horizontal"
-              android:background="@color/Lightblue"
+              android:background="@color/colorPrimaryLight"
               android:layout_width="match_parent"
               android:layout_height="80dp">
 <ImageView
     android:layout_gravity="center_vertical"
     android:id="@+id/img"
-    android:layout_width="40dp"
-    android:layout_height="40dp"/>
+    android:layout_width="1dp"
+    android:layout_height="1dp"/>
     <TextView
         android:id="@+id/text"
-        android:layout_gravity="center_vertical"
+        android:layout_gravity="center"
         android:gravity="center"
+        tools:text="s"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 </LinearLayout>
